--- a/style.css
+++ b/style.css
@@ -1,11 +1,33 @@
 /* comentario */
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+/* SASS y variables */ /* imprenta CMYK */
+:root {
+    /* paleta de colores */
+    --violeta: #452389; /* RGB */
+    --blancoMarfil:#e2e6ea;
+    --transparente: rgba(116, 10, 255, 0.484);
+
+    /* tamaños */
+    --tamanoParrafo: 2rem;
+    --tamamoTitulos: 4rem;
+    --tamanoSubtitulos: 2.8rem;
+
+    /* fondos */
+    --fondoTexto:#e8c7ff;
+    --fondoOscuro:#0f011e;
+
+}
 
 /* selector {  propiedades: valor; } */
 
-* {
+body {
     margin: 0;
     padding: 0;
     font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
+    background: rgb(0,212,255);
+    background: linear-gradient(180deg, rgba(0,212,255,0.19931722689075626) 18%, rgba(5,66,148,0.8575805322128851) 62%);
 }
 
 /* selectores de etiqueta */
@@ -15,12 +37,12 @@ h1 {
     font-size: larger;
     margin: auto;
     padding: 10px;
-    background-color: #452389;
+    background-color: var(--violeta);
     text-align: center;
 }
 
 h6/*, #tituloUno*/ {
-    color: #452389;
+    color: var(--violeta);
     font-size: medium;
     margin-top: 20px;
     margin-left: 50px;
@@ -51,11 +73,10 @@ h6/*, #tituloUno*/ {
     margin-top: 10px;
     margin-bottom: 10px;
     color: aliceblue;
-    background-color: #422184;
+    background-color: var(--transparente);
     padding: 10px;
     border-radius: 30px;
     width: 120px;
-    /*margin: auto;*/
     text-align: center;
 }
 
@@ -64,6 +85,7 @@ p {
     width: 50%;
     font-size: 1.1rem!important;
     /*display: inline;*/
+    border: 2px solid var(--violeta);
 }
 
 article {
@@ -81,3 +103,28 @@ p {
 a{
     display: block;
 }
+
+#img {
+    /*
+    background-image: url(img/meme.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;*/
+    width: 500px;
+    height: 500px;
+    background-color: var(--violeta);
+    color: var(--blancoMarfil);
+}
+
+/* selector por herencia */
+
+#img h3 {
+        font-family: "Barlow", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 3rem;
+        text-align: center;
+        height: auto;
+}
+
+
+
