--- a/style.css
+++ b/style.css
@@ -83,12 +83,12 @@ h6/*, #tituloUno*/ {
     text-align: center;
 }
 
-p {
+.ppp {
     margin-bottom: 15px;
-    width: 50%;
+    width: 100%;
     font-size: 1.1rem!important;
     /*display: inline;*/
-    border: 2px solid var(--violeta);
+    /*border: 2px solid var(--violeta);*/
 }
 
 article {
@@ -134,45 +134,48 @@ a{
 
 /* margin - padding */
 
-b{
-    margin: 10px; /* todos los bordes */
+.bb{
+    margin: 10px;  /* margen 10px en todos los lados */
     margin-top: 15px; /* el lado puntual */
     margin-right: 15px;
     margin-bottom: 15px;
     margin-left: 15px;
+
     margin: 10px 15px; /* top/bottom   right/left */
     margin: 10px 15px 20px; /* top   right/left  bottom */
     margin: 10px 15px 20px 25px; /* top   right bottom  left */
 
-    padding: 10px; /* todos los bordes */
+    padding: 10px;  /* margen 10px en todos los lados */
     padding-top: 15px; /* el lado puntual */
     padding-right: 15px;
     padding-bottom: 15px;
     padding-left: 15px;
+
     padding: 10px 15px; /* top/bottom   right/left */
     padding: 10px 15px 20px; /* top   right/left  bottom */
-    padding: 10px 15px 20px 25px; /* top   right bottom  left */
+    padding: 10px 15px 0 25px; /* top   right bottom  left */
 
-    border: 1px; /* todos los bordes */
+    border: 1px;  /* margen 10px en todos los lados */
     border-top: 2px; /* el lado puntual */
     border-right: 2px;
     border-bottom: 2px;
     border-left: 2px;
+
     border: 1px 2px; /* top/bottom   right/left */
-    border: 1px 2px 3px; /* top   right/left  bottom */
-    border: 1px 2px 3px 2px; /* top   right bottom  left */
-    border: 1px solid var(--violeta);
+    border: 3px 1px 2px; /* top   right/left  bottom */
+    border: 1px 1px 2px 2px; /* top   right bottom  left */
 
     border-color: #452389;
     border-width: 2px;
-    border-style: dotted;
+    border-style: solid;
 
-    border-color: #452389 red blue;
-    border-width: 2px 3px 1px 2px;
-    border-style: dotted solid solid;
+    border-color: red green blue var(--violeta);
+    border-width: 1px 1px 2px 2px;
+    border-style: solid dotted solid;
 
-    box-sizing: border-box; /* box model es  un bloque */  
-}
+    box-sizing: border-box; /* content-box border-box initial inherit */
+
+  }
 
 /* display */
 
@@ -188,10 +191,11 @@ b{
 
 .box{
     width: 300px;
-    height: 300px;
+    /*height: 300px;*/
     border: 2px solid var(--fondoOscuro);
     opacity: 90%;
-    position: absolute;
+    background-color: #452389;
+    /*position: absolute;*/
 }
 
 .texto {
@@ -230,4 +234,84 @@ b{
     height: 50px;
     margin: 0;
     background-color: #281039;
+}
+
+li{
+    font-size: 2rem;
+}
+
+li:first-child {
+    font-weight: 700;
+    font-size: 3rem;
+    color: var(--violeta);
+}
+
+li:last-child {
+    font-weight: 700;
+    font-size: 3rem;
+    color: var(--violeta);
+}
+
+li:nth-child(3n) {
+    font-weight: 700;
+    font-size: 3rem;
+    color: var(--violeta);
+}
+
+li:nth-child(even) {
+    font-weight: 700;
+    font-size: 3rem;
+    color: var(--violeta);
+} /* elementos pares 
+
+li:nth-child(odd) {
+    font-weight: 700;
+    font-size: 3rem;
+    color: var(--violeta);
+} /* elementos impares */
+
+/* link / hover / visited / active */
+/*
+li:hover{
+    color: green;
+    font-size: 3rem;
+    background-color: blue;
+}
+
+div{
+    width: 100px;
+    height: 100px;
+    border: 2px solid var(--fondoOscuro);    
+}
+
+div:hover{
+    border-radius: 100px;
+    background-color: var(--fondoOscuro);
+}
+
+b::selection{
+    background-color: var(--fondoOscuro);
+    color: white;
+}
+
+p::before{
+    content: "😄";
+}
+
+p::after{
+    content: "Hola 😊";
+}
+*/
+
+/* flexbox */
+
+.container{
+    width: 100%;
+    height: 600px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: auto;
 }
